# GalileoFallingBodies.gaia

./: .gitignore  README.md  pyproject.toml
.gaia/: ir.json  ir_hash
.gaia/reviews/self_review/: beliefs.json  parameterization.json
galileo_falling_bodies/: __init__.py
galileo_falling_bodies/reviews/: __init__.py  self_review.py
