[project]
name = "galileo-falling-bodies-gaia"
version = "4.0.0"
description = "Galileo's falling bodies argument — Gaia knowledge package"
authors = [{name = "Galileo Galilei"}]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["galileo_falling_bodies*"]

[tool.gaia]
namespace = "galileo"
type = "knowledge-package"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
