[project]
name = "galileo-falling-bodies-gaia"
version = "5.0.0"
description = "Galileo's falling bodies argument — Gaia knowledge package"
authors = [{name = "Galileo Galilei"}]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["galileo_falling_bodies*"]

[tool.gaia]
namespace = "github"
type = "knowledge-package"
uuid = "a1b2c3d4-e5f6-7890-abcd-ef1234567890"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
